fix the letter spacing for labels

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ label{
     color: rgb(73, 72, 72);
     font-weight: bold;
     font-size: 12px;
+    letter-spacing: 1px;
 }
 
 input{
